# google-places-api-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: integration_tests.yml  unit_tests.yml
examples/: basic_place_details.rs  basic_search.rs  find_place.rs  nearby_search.rs  place_details.rs  place_photos.rs  text_search.rs
examples/outputs/: .gitignore  find_place.json  nearby_search.json  place_details.json  text_search.json
prisma/: schema.prisma
prisma-cli/: Cargo.toml
resources/tests/: find_place.txt  nearby_search.txt  place_details.txt  text_search.txt
src/: client.rs  error.rs  errors.rs  globals.rs  grid.rs  lib.rs  main.rs  places.rs  response.rs
src/models/: language.rs  mod.rs  place.rs  place_details.rs  place_photos.rs  place_search.rs  response.rs  review_sort.rs  status.rs
src/models/constants/: input_type.rs  language.rs  location_bias.rs  mod.rs  place.rs  place_data_fields.rs  place_types.rs  rank_by.rs  review_sort.rs
src/services/: mod.rs  place_details.rs  place_photos.rs  place_search.rs  request.rs
src/utils/: grid.rs  mod.rs  rate_limiter.rs
tests/: find_place.rs  nearby_search.rs  place_details.rs  text_search.rs
