[package]
name = "waldo_google_api"
version = "0.1.0"
edition = "2021"
description = "Crate to access google api for the Waldo project."
homepage = "https://github.com/jonsaw/google-maps-places-rs"
documentation = "https://docs.rs/google-maps-places"
repository = "https://github.com/jonsaw/google-maps-places-rs"
readme = "README.md"
license = "MIT"
keywords = ["maps", "api", "places"]
categories = ["api-bindings"]

exclude = [
  "test/*",
]

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.1.1", features = ["json"] }
dotenv = "0.15.0"
image = "*"
reqwest = {version = "0.11", features = ["json","blocking"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
tokio = { version = "1.28.2", features = ["full"] }
geoutils = "0.5.1"
itertools = "0.10.5"


# Feature optional dependencies
async-graphql = { version = "2.9.9", optional = true }

[dev-dependencies]
mockito = "0.30.0"

[workspace]
members = ["prisma-cli"]
